# rumour-milled

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
configs/: businesstech.yaml  cbc.yaml  nbc.yaml  rnz.yaml  yahoo.yaml
configs/aws/: rumour-milled-scraper-finished-start-training.json
configs/scraping/: abc.yaml  businesstech.yaml  cbc.yaml  default.yaml  fox.yaml  herald.yaml  irish-times.yaml  nbc.yaml  rnz.yaml  sky.yaml  yahoo.yaml
docker/: scraper.Dockerfile
notebooks/: 01_eda.ipynb  02_train_model.ipynb  03_load_models.ipynb  04_explainability.ipynb  05_pytorch.ipynb
pipelines/: train_pipeline.py
scripts/: generate_headlines.py  register_training.py  run_scrapers.py  train_model.py  train_models.py
services/ecs_finish_handler/: Dockerfile  job.py  requirements.txt
services/processor/: job.py  requirements.txt
services/scraper/: Dockerfile
services/scraper_nano/: Dockerfile  job.py  requirements.txt
services/trainer/: job.py  requirements.txt
src/: preprocessing.py
src/headline_scrapers/: base.py  parsers.py  scraper-configs.yaml  scrapers.py  scrapy.cfg  utils.py  yahoo.py
src/headline_scrapers/configs/: abc.yaml  businesstech.yaml  cbc.yaml  default.yaml  fox.yaml  herald.yaml  irish-times.yaml  nbc.yaml  rnz.yaml  sky.yaml  yahoo.yaml
src/headline_scrapers/headline_scrapers/: items.py  middlewares.py  pipelines.py  settings.py
src/headline_scrapers/headline_scrapers/spiders/: yahoo_scraper.py
src/headlines_generators/: generators.py
src/rumour_milled/: encoders.py  load.py  models.py  predict.py  preprocessing.py  save.py  train.py  train_model.py
src/rumour_milled/generation/: generators.py
src/rumour_milled/ml/: encoders.py  load.py  train.py
src/rumour_milled/ml/models/: gan.py
src/rumour_milled/scraping/: base.py  parsers.py  scrapers.py
src/rumour_milled/storage/: dynamodb.py
src/storage/: dynamodb.py  storage.py
tests/: test_pipeine.py
tests/headline_scrapers/: scrapers_test.py
tests/storage/: storage_test.py
