[project]
name = "rumour-milled"
version = "0.1.0"
description = "Detecting misinformation in financial news headlines using classical NLP, transformer embeddings, and explainable AI."
authors = [
    {name = "Ned Stickler",email = "nedstickler@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
