[project]
name = "rumour-milled"
version = "0.1.0"
description = "Detecting misinformation in financial news headlines using classical NLP, transformer embeddings, and explainable AI."
authors = [
    {name = "Ned Stickler",email = "nedstickler@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (<2)",
    "tqdm (>=4.67.1,<5.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "playwright (>=1.53.0,<2.0.0)",
    "validators (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "boto3 (>=1.39.9,<2.0.0)",
    "awscli (>=1.41.9,<2.0.0)",
    "sagemaker (>=2.250.0,<3.0.0)",
    "pipreqs (>=0.5.0,<0.6.0)",
]

[tool.poetry]
packages = [{include = "rumour_milled", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
